--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -1,7 +1,8 @@
 <table>
-  <caption>赛道：<%= @racing_session.track_name %>-<%= @racing_session.track_config.presence || '默认' %></caption>
+  <caption><%= @track.name %>-<%= @track.config.presence || '默认' %>-圈速榜</caption>
   <thead>
     <tr>
+      <th>排名</th>
       <th>车手</th>
       <th>车辆</th>
       <th>圈速</th>
@@ -9,8 +10,9 @@
     </tr>
   </thead>
   <tbody>
-<% @laps.each do |lap| %>
+<% @laps.each_with_index do |lap, index| %>
   <tr>
+    <td><%= index + 1 + (@laps.current_page - 1) * @laps.limit_value %></td>
     <td><%= lap.driver_name %></td>
     <td><%= lap.car_model %></td>
     <td><%= ms_to_str lap.time %></td>
@@ -19,3 +21,4 @@
 <% end %>
   </tbody>
 </table>
+<%= paginate @laps %>
