--- a/app/views/laps/index.html.erb
+++ b/app/views/laps/index.html.erb
@@ -2,6 +2,7 @@
   <caption>赛道：<%= @racing_session.track_name %>-<%= @racing_session.track_config.presence || '默认' %></caption>
   <thead>
     <tr>
+      <th>圈数</th>
       <th>车手</th>
       <th>车辆</th>
       <th>圈速</th>
@@ -9,8 +10,9 @@
     </tr>
   </thead>
   <tbody>
-<% @laps.each do |lap| %>
+<% @laps.each_with_index do |lap, index| %>
   <tr>
+    <td><%= index + 1 %></td>
     <td><%= lap.driver_name %></td>
     <td><%= lap.car_model %></td>
     <td><%= ms_to_str lap.time %></td>
