--- a/app/views/tracks/index.html.erb
+++ b/app/views/tracks/index.html.erb
@@ -7,8 +7,9 @@
   <tbody>
 <% @tracks.each do |track| %>
   <tr>
-    <td><%= track.name %>-<%= track.config.presence || '默认' %></td>
+    <td><%= link_to "#{track.name}-#{track.config.presence || '默认'}", track %></td>
   </tr>
 <% end %>
   </tbody>
 </table>
+<%= link_to '首页', root_path %>
